Configuración inicial del header de nuestra página

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,16 @@
     <title>Alpine.JS</title>
 </head>
 <body>
+
+    <header class="flex items-center justify-between px-8 bg-gray-800 h-20 text-white">
+        <logo>
+            <a class="flex items-center gap-1" href="">
+                <img class="h-8 -mt-1" src="https://img.icons8.com/small/64/ffffff/fire-heart.png" alt="fire-heart"/>
+                <span>Alpine.js</span>
+            </a>
+        </logo>
+        <nav>Navigation</nav>
+    </header>
     
 </body>
 </html>
